--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,11 +30,17 @@ pre {
   font-size: 14px;
 }
 
-button {
+button,
+input {
   border: 1px solid;
   padding: 4px;
+  font-size: inherit;
 }
 
 .page {
   padding: 16px;
+}
+
+.mb-16px {
+  margin-bottom: 16px;
 }
